// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders 1`] = `
.c0 {
  min-height: 34px;
  padding: 6px 8px;
  font-size: 16px;
  line-height: 20px;
  color: #24292e;
  vertical-align: middle;
  background-color: #fff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d1d5da;
  border-radius: 3px;
  outline: none;
  box-shadow: rgba(27,31,35,0.075) 0px 1px 2px inset;
}

.c0:focus {
  border-color: #2188ff;
  outline: none;
  box-shadow: rgba(27,31,35,0.075) 0px 1px 2px inset,rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

@media (min-width:544px) {
  .c0 {
    font-size: 14px;
  }
}

<input
  className="c0"
  name="zipcode"
  type="text"
/>
`;

exports[`TextInput renders block 1`] = `
.c0 {
  min-height: 34px;
  padding: 6px 8px;
  font-size: 16px;
  line-height: 20px;
  color: #24292e;
  vertical-align: middle;
  background-color: #fff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d1d5da;
  border-radius: 3px;
  outline: none;
  box-shadow: rgba(27,31,35,0.075) 0px 1px 2px inset;
  display: block;
  width: 100%;
}

.c0:focus {
  border-color: #2188ff;
  outline: none;
  box-shadow: rgba(27,31,35,0.075) 0px 1px 2px inset,rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

@media (min-width:544px) {
  .c0 {
    font-size: 14px;
  }
}

<input
  className="c0"
  name="zipcode"
  type="text"
/>
`;

exports[`TextInput renders large 1`] = `
.c0 {
  min-height: 34px;
  padding: 6px 8px;
  font-size: 16px;
  line-height: 20px;
  color: #24292e;
  vertical-align: middle;
  background-color: #fff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d1d5da;
  border-radius: 3px;
  outline: none;
  box-shadow: rgba(27,31,35,0.075) 0px 1px 2px inset;
  width: large;
  height: large;
  width: large;
  height: large;
}

.c0:focus {
  border-color: #2188ff;
  outline: none;
  box-shadow: rgba(27,31,35,0.075) 0px 1px 2px inset,rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

@media (min-width:544px) {
  .c0 {
    font-size: 14px;
  }
}

<input
  className="c0"
  name="zipcode"
  size="large"
  type="text"
/>
`;

exports[`TextInput renders small 1`] = `
.c0 {
  min-height: 34px;
  padding: 6px 8px;
  font-size: 16px;
  line-height: 20px;
  color: #24292e;
  vertical-align: middle;
  background-color: #fff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d1d5da;
  border-radius: 3px;
  outline: none;
  box-shadow: rgba(27,31,35,0.075) 0px 1px 2px inset;
  width: small;
  height: small;
  width: small;
  height: small;
}

.c0:focus {
  border-color: #2188ff;
  outline: none;
  box-shadow: rgba(27,31,35,0.075) 0px 1px 2px inset,rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

@media (min-width:544px) {
  .c0 {
    font-size: 14px;
  }
}

<input
  className="c0"
  name="zipcode"
  size="small"
  type="text"
/>
`;
